styles/styles.css
@import url('https://fonts.googleapis.com/css?family=Roboto:500,900|Montserrat:400,700|Comfortaa:700|Lobster&display=swap');

html {
    scroll-behavior: smooth;
}

.nav-head {
    height: 100vh;

    background-image: url("../img/head-back.jpg");
    background-size: cover;
    background-position: center center;
    z-index: 0;

}

.nav-head::after {
    content: "";
    background-image: linear-gradient(to top, rgba(0, 0,0, 0.6), rgba(0,0,0,1));
    height: 100%;
    width: 100%;

    position: absolute;
    top: 0;
    left: 0;

    z-index: 0;
}

nav {
    font-size: 1.1rem;
    font-family: 'Comfortaa', cursive;

    z-index: 1;
}

.nav-head nav {
    padding: 20px 10%;
}

.navbar-brand {
    color: red !important;

    font-size: 1.7rem;
    letter-spacing: 0.1rem;
    font-weight: bolder;
}

nav li {
    margin: 0 10px;
    font-family: 'Montserrat', sans-serif;
}

.page-title {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 85%;
}

.page-head {
    position: relative;
    color: white;
    z-index: 1;

    font-family: 'Montserrat', sans-serif;
    font-size: 5rem;
    font-weight: bolder;
}


.second-section {
    width: 100vw;
    height: 100%;

    padding-top: 2rem;
    font-family: 'Montserrat', sans-serif;
    font-weight: bold;

}

.list-head {
    border-bottom: 5px solid  red;
    margin: 0 30%;
    margin-bottom: 5rem;


    text-align: center;
}

.searchbar {
    font-size: 1rem;
    width: 100%;
    height: 1rem;
    border: none;
    outline: none;
    border-radius: 10rem;
    box-shadow: 0 1rem 2rem rgba(black, .1);
    padding: 1rem;
    position: relative;
    transition: all .2s;
    transition-delay: .1s;
    margin-bottom: 5%;

    border: rgb(235, 235, 235) 3px solid;
}

.searchbar:focus, .searchbar:hover {
    background-color: #f2f2f2;
}
  

.searchbar::placeholder {
    opacity: .5;
}

.list-controls {
    margin-bottom: 2rem;
}

.sort button {
    border-radius: 25px;
    border-color: rgb(235, 235, 235);
    border-width: 3px;

    background-color: transparent;
    color: black;

    width: 7rem;
}

@media screen and (max-width: 450px) {
    .page-head {
        font-size: 3.5rem;
    }

    .list-head {
        font-size: 2rem;
    }
}


.list-item {
    background-color: #f2f2f2;

    width: 100%;
    height: 100%;

    border-radius: 10px;

    box-shadow: black 0px 0px 20px;

    margin-bottom: 3%;
}


.col-sm-8 {
    padding-top: 1rem;
}

.list-image {
    width: 100%;
    height: 250px;
}

.list-item:hover {
    transform: scale(1.05);
}


.list-content {
    font-weight: bold;
    font-size: 1.5rem;
    font-family: 'Lobster', cursive;

    color: black;
}

@media screen and (max-width: 575px) {
    .list-image {
        width: 100%;
        height: 200px;
    }

    .item-head {
        font-size: 1rem;
    }

    .col-sm-8 {
        padding-left: 2rem;
    }
}

.brand {
    margin-bottom: -0.1rem;
    font-family: 'Roboto', sans-serif;
    font-size: 1.2rem;

    opacity: 60%;
}

.variety {
    font-size: 150%;
    margin-bottom: 0rem;

    line-height: 0.8;
}

.style {
    font-family: 'Roboto', sans-serif;
    font-size: 1.5rem;
    opacity: 80%;

    margin-bottom: 5%;
}

.country-ranking {
    text-align: center;
}

.country-head, .top-ten-head {
    margin-bottom: -0.3rem;
    opacity: 60%;
}

.country, .top-ten {
    font-size: 1.5rem;
}

.footer {
    padding-top: 3%;
    padding-bottom: 3%;

    background-color: black;
    color: white;

    font-family: 'Comfortaa', cursive;
}

.contact-icon {
    margin: 20px 10px;
    color: white;
}

